possible overflow bug on chromium browsers??

--- a/public/assets/carousel/css/carousel.css
+++ b/public/assets/carousel/css/carousel.css
@@ -25,9 +25,7 @@ body, html {
 
     transition: background-size 0.5s ease, filter 0.5s ease;
     z-index: -1;
-    filter: blur(10px) brightness(0.5);
-    transform: scale(1.2);
- 
+    filter: blur(10px) brightness(0.45); 
 }
 
 .slides {
